tests/paczka1/fuzzy1/73785685.err
Error in line 2: LVp A900 75,8
Error in line 25: 6qk{bWbdYj5 A50{ 12,8
Error in line 20: lWo A504 31,2
Error in line 30: b2vBNb A900 5F5
Error in line 36: b2vBNb A900 237,2
Error in line 29: 6qk4bWbdYj5 S746 42,7
